syntax = "proto3";

package products;

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
    rpc ProductDetails(ProductDetailsRequest) returns (ProductDetailsResponse) {}
}

message PaginateProductListResponse {
    string id = 1;
    string name = 2;
    string sku = 3;
    float price = 4;
}

message CreateProductRequest {
    string name = 1;
    string sku = 2;
    string slug = 3;
    float price = 4;
    int32 stock = 5;
    string categories = 6;
}

message CreateProductResponse {
    string id = 1;
}

message ProductDetailsRequest {
    string id = 1;
}

message ProductDetailsResponse {
    string id = 1;
    string name = 2;
    string sku = 3;
    string slug = 4;
    float price = 5;
    int32 stock = 6;
    string createdAt = 7;
    repeated string categories = 8;
}

message BadRequestResponse {
    int32 statusCode = 1;
    string message = 2;
    string error = 3;
}